rnsc/tests/snapshots/error-lexer-directives-dot_semicolon.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method
    .;comment after semicolon
.method_end
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_semicolon.rns:2:5 ]
   │
 2 │     .;comment after semicolon
   │     ────┬────  
   │         ╰────── '.;comment' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
