rnsc/tests/snapshots/error-lexer-directives-dot_string_literal.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
."Hello@World!"      ;;;;;;;;;; -_-
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_string_literal.rns:1:1 ]
   │
 1 │ ."Hello@World!"      ;;;;;;;;;; -_-
   │ ───────┬───────  
   │        ╰───────── '."Hello@World!"' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
