rnsc/tests/snapshots/error-lexer-directives-dot_synthetic.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.synthetic
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_synthetic.rns:1:1 ]
   │
 1 │ .synthetic
   │ ─────┬────  
   │      ╰────── '.synthetic' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
