rnsc/tests/snapshots/error-lexer-directives-unknown_directive_as_first_token.snap
---
source: rns-asm/tests/rns_test.rs
assertion_line: 210
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
    .unknown_directive HelloWorld
.class_end
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/unknown_directive_as_first_token.rns:1:5 ]
   │
 1 │     .unknown_directive HelloWorld
   │     ─────────┬────────  
   │              ╰────────── '.unknown_directive' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
